--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -1,1 +1,15 @@
 {% extends "basic.html" %}
+
+{% block title %}
+First app project
+{% endblock %}
+
+{% block content %}
+    {% for post in posts %}
+        <a href="{#  #}">
+            <h2>post.title</h2>
+        </a>
+        <span class="badge badge-primary">{# #}</span>
+        <a href="{#  #}" class="badge badge-secondary">Изменить</a>
+        <hr>
+{% endblock %}
