--- a/templates/basic.html
+++ b/templates/basic.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.108.0">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %} {% endblock %}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/headers/">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -89,11 +89,11 @@
         </a>
 
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="{% url "main" %}" class="nav-link active" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="{% url "create-thread" %}" class="nav-link">Create</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Лень убирать</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">эти кнопки</a></li>
+          <li class="nav-item"><a href="#" class="nav-link">Могут пригодится</a></li>
         </ul>
       </header>
     </div>
