--- a/templates/thread.html
+++ b/templates/thread.html
@@ -2,7 +2,7 @@
 {% block content %}
     <h2>{% block title %}{{ post.title }}{% endblock %}</h2>
 
-    <span class="navbar-dark">{{ post.created_time }}</span>
-    <p>{{ post.content }}</p>
+    <span class="nav-link active">{{ post.created_time }}</span>
+    <p class="nav-link">{{ post.content }}</p>
 {% endblock %}
 
